--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
+    "postcss-at-rules-variables": "^0.3.0",
+    "postcss-color-mix": "^1.1.0",
+    "postcss-each": "^1.1.0",
+    "postcss-each-variables": "^0.3.0",
+    "postcss-for": "^2.1.1",
     "postcss-nested": "^6.0.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
